Worked on alignment issues based on device

--- a/app/assets/styles/_player.scss
+++ b/app/assets/styles/_player.scss
@@ -379,3 +379,13 @@
   }
 
 }
+@media only screen and
+(min-device-width: 320px) and (max-device-width: 1024px) {
+  .save-cancel-parent {
+    display: inline;
+  }
+  .save-cancel-player{
+    padding: 6px 12px !important;
+    width: 32%;
+  }
+}
